app/assets/stylesheets/month.css.scss
@import 'variables.css.scss';

.cal {
  padding: 10px;
  background-color: $gray;
  border-radius: 8px;
  margin-bottom: 20px;
  @media (max-width: 320px) {
    padding: 0;
  }
  tr {
  @media (max-width: 320px) {
    font-size: 0.2em;
  }
  }
}

.a_popup.completed {
  background-color: $light_blue;
}
.a_popup.not_completed {
  background-color: $orange;
}

.a_popup {
  font-size: 0.9em;
  .description {
    margin-bottom: 0.5em;
  }
  .due_date {
    font-weight: bold;
  }
  .due_time {
    font-weight: bold;
  }
}


.a_dialog {
  font-size: 0.9em;
  .description {
    margin-bottom: 0.5em;
  }
  .due_date {
    font-weight: bold;
  }
  .due_time {
    font-weight: bold;
  }
  .edit_btn, .delete_btn {
    visibility: visible;
    margin-top: 0.5em;
  }

}

table {
  border-collapse: collapse;
  /* margin: 10px auto; */
  border: 1px solid $dark_blue;
  background-color: $gray;
  td {
    border: 1px solid black;
    margin: 0;
    padding: 0;
    background-color: $gray;
    min-width: 75px;
    min-height: 75px;
    @media (max-width: 321px) {
      max-width: 44px;
      min-height: 20px;
    }

    .day_cal {
      min-height: 75px;
      @media (max-width: 321px) {
        min-height: 30px;
      }
    }
    
  }
  .cal_day {
    color: $dark_blue;
  }
  .subj_link {
    margin-left: 2px;
    margin-right: 2px;
    padding: 2px 3px;
    cursor: pointer;
    margin-bottom: 0.2em;
    border-radius: 6px;
    color: $dark_blue;
    overflow:hidden; //so on phone gets cut off
  }
}

